Adding standard checks

--- a/.github/workflows/ci-standard-checks.yml
+++ b/.github/workflows/ci-standard-checks.yml
@@ -14,9 +14,7 @@ on:
       - main
 jobs:
   ci-standard-checks:
-    runs-on:
-      - self-hosted
-      - automated-checks-ephemeral
+    runs-on: [ubuntu-latest]
     steps:
       - name: Check Out Source Code
         uses: actions/checkout@v3
