--- a/.github/workflows/ci-standard-checks.yml
+++ b/.github/workflows/ci-standard-checks.yml
@@ -14,16 +14,4 @@ on:
       - main
 jobs:
   ci-standard-checks:
-    runs-on:
-      - self-hosted
-      - automated-checks-ephemeral
-    steps:
-      - name: Check Out Source Code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - name: CI Standard Checks
-        uses: Typeform/ci-standard-checks@v1
-        with:
-          githubToken: ${{ secrets.GITHUB_TOKEN }}
-          skipChecks: required-typescript
+    uses: Typeform/.github/.github/workflows/ci-standard-checks-workflow.yaml@v1
